expande/collapse comments when click commentIcon on different or current question, fixed qestion styles for small screens

--- a/app/app_pree/styles/base/_colors.scss
+++ b/app/app_pree/styles/base/_colors.scss
@@ -9,4 +9,5 @@ $active: #ddd;
 $text: #333;
 $text-hover: #777;
 $red: #ff0000;
-$yellow: #fff2cc
+$yellow: #fff2cc;
+$highlighted: #ffffcc;
